--- a/less/shared/tables.less
+++ b/less/shared/tables.less
@@ -7,6 +7,10 @@ table {
   &:extend(.table all);
 }
 
+table.PreferenceGroup tbody tr:hover td {
+  background-color: @gray-dark;
+}
+
 .Preferences .PreferenceGroup {
   width: 100%;
 }
