--- a/less/shared/type.less
+++ b/less/shared/type.less
@@ -59,7 +59,7 @@ h1.H {
 // Blockquotes
 blockquote {
   font-size: @blockquote-font-size;
-  margin: 0px 0px 10px;
+  margin: 15px 0px 15px;
   background-color: #222;
   padding: 15px 22px;
 }
