--- a/less/themes/red-darkly/bootswatch.less
+++ b/less/themes/red-darkly/bootswatch.less
@@ -296,5 +296,5 @@ textarea {
 }
 
 .panel-default > .panel-heading {
-  background-color: @panel-footer-bg;
+  background-color: @brand-success;
 }
